src/objects/ExpoSession__c.object
<CustomObject>
    <fields>
        <fullName>ExpireDT__c</fullName>
        <label>ExpireDT</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExpoUserRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ExpoUser</label>
        <referenceTo>ExpoUser__c</referenceTo>
        <relationshipName>ExpoSessionUserRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SessionId__c</fullName>
        <label>SessionId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Expoセッション</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>No#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>